# ash

./: .gitignore  Makefile  README.md  agents.toml  pyproject.toml
.agents/: .gitignore
.claude/: settings.json
docs/: package.json  pnpm-lock.yaml
docs/src/content/docs/cli/: overview.mdx
docs/src/content/docs/configuration/: overview.mdx  reference.mdx
docs/src/content/docs/systems/: skills.mdx  tools.mdx
evals/: judge.py  runner.py  types.py
evals/cases/: contextual_disclosure.yaml  identity.yaml  image_behaviors.yaml  memory.yaml  memory_extraction.yaml  passive_engagement.yaml  scheduler.yaml  system_e2e.yaml  todo.yaml
specs/: capabilities.md  capability-auth.md  close_game_alert.md  config.md  email_forward_summary.md  integration-auth-security.md  integrations.md  interactive-agents.md  reactive_workflows.md  research.md  rpc.md  schedule.md  sentry.md  sessions.md  skills.md  subsystems.md  todos.md  web_search.md
src/ash/: context_token.py
src/ash/agents/: base.py  executor.py  types.py
src/ash/agents/builtin/: __init__.py  deep.py  research.py
src/ash/browser/: bridge.py
src/ash/capabilities/: __init__.py  auth_normalization.py  manager.py  types.py
src/ash/capabilities/providers/: __init__.py  base.py  subprocess.py
src/ash/chats/: models.py  thread_index.py
src/ash/cli/: app.py  context.py
src/ash/cli/commands/: __init__.py  chat.py  config.py  doctor.py  logs.py  research.py  schedule.py  serve.py  todo.py  upgrade.py
src/ash/cli/commands/memory/: show.py
src/ash/config/: __init__.py  loader.py  models.py
src/ash/core/: agent.py  context.py  prompt.py  types.py
src/ash/deepagents/: __init__.py  runtime.py
src/ash/graph/: edges.py
src/ash/integrations/: __init__.py  capabilities.py  close_game_alert.py  composer.py  deepagents.py  defaults.py  email_forward_summary.py  memory.py  reactive_workflows.py  rpc.py  runtime.py  scheduling.py  todo.py
src/ash/integrations/skills/capabilities/google/: SKILL.md
src/ash/integrations/skills/capabilities/google/references/: auth-and-failures.md  gmail-workflows.md  output-templates.md
src/ash/integrations/skills/scheduling/schedule/: SKILL.md
src/ash/integrations/skills/todo/todo/: SKILL.md
src/ash/llm/: __init__.py  openai.py  pioneer.py  registry.py
src/ash/memory/: extractor.py  postprocess.py  processing.py
src/ash/observability/: __init__.py
src/ash/providers/: base.py  runtime.py
src/ash/providers/telegram/: formatting.py  provider.py
src/ash/providers/telegram/handlers/: message_handler.py  session_handler.py  tool_tracker.py  utils.py
src/ash/research/: __init__.py  service.py
src/ash/rpc/methods/: capability.py  memory.py  schedule.py  todo.py
src/ash/sandbox/: executor.py  manager.py
src/ash/scheduling/: handler.py  store.py  types.py
src/ash/server/: runner.py
src/ash/service/: runtime.py
src/ash/sessions/: types.py
src/ash/skills/: registry.py  types.py
src/ash/skills/bundled/briefing/: SKILL.md
src/ash/skills/bundled/delegate-deep/: SKILL.md
src/ash/skills/bundled/fan-out/: SKILL.md
src/ash/skills/bundled/gog/: README.md
src/ash/skills/bundled/gog/scripts/: gogcli_bridge.py
src/ash/skills/bundled/playbook/: SKILL.md
src/ash/skills/bundled/research-command/: SKILL.md
src/ash/skills/bundled/research/research/: SKILL.md
src/ash/skills/bundled/skill-writer/: SKILL.md
src/ash/skills/bundled/todo-sweep/: SKILL.md
src/ash/skills/bundled/triage/: SKILL.md
src/ash/skills/bundled/watch/: SKILL.md
src/ash/store/: retrieval.py  search.py
src/ash/todos/: manager.py
src/ash/tools/: __init__.py  base.py
src/ash/tools/builtin/: __init__.py  agents.py  deepagents.py  memory.py  messages.py  skills.py  web_fetch.py  web_search.py
tests/: test_agent.py  test_agent_executor.py  test_architecture_hooks.py  test_bundled_gog_skill.py  test_bundled_skill_writer.py  test_capabilities.py  test_capability_subprocess_provider.py  test_chat_command.py  test_cli.py  test_close_game_alert_integration.py  test_config.py  test_deepagents_integration.py  test_email_forward_summary_integration.py  test_evals_judge.py  test_evals_runner.py  test_gog_capability_e2e.py  test_gogcli_bridge.py  test_integrations_builtin.py  test_integrations_defaults.py  test_integrations_rpc.py  test_integrations_runtime.py  test_logs_command.py  test_memory_extractor.py  test_observability.py  test_providers.py  test_reactive_workflows_integration.py  test_research_service.py  test_retrieval_pipeline.py  test_rpc_memory.py  test_rpc_server_capability_context.py  test_sandbox_capability_cli.py  test_sandbox_cli.py  test_sandbox_executor.py  test_sandbox_manager.py  test_schedule.py  test_server_runner.py  test_sessions.py  test_skill_execution.py  test_skills.py  test_telegram.py  (+2 more)
