[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ash"
version = "0.1.0"
description = "Personal Assistant Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    # CLI & Server
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "rich>=13.0.0",
    # Telegram
    "aiogram>=3.15.0",
    # LLM Providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Docker
    "docker>=7.0.0",
    # Graph storage
    "numpy>=1.26.0",
    # Configuration & Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tomlkit>=0.13.0",  # For preserving TOML formatting when writing
    # HTTP Client
    "httpx>=0.27.0",
    # Browser automation
    "playwright>=1.54.0",
    # Environment
    "python-dotenv>=1.0.0",
    # Auth
    "filelock>=3.13.0",
    # Caching
    "cachetools>=5.3.0",
    "croniter>=6.0.0",
    # Workspace packages
    "ash-rpc-protocol",
    "langchain-openai>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a11",
]
sentry = [
    "sentry-sdk[fastapi]>=2.60.0",
]
deepagents = [
    "deepagents>=0.6.0,<0.8",
    "langsmith>=0.2.0",
]

[project.scripts]
ash = "ash.cli:app"
evals = "ash.evals_cli:main"
gogcli = "ash.skills.bundled.gog.scripts.gogcli_bridge:main"

# ============== UV CONFIGURATION ==============

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ash-rpc-protocol = { workspace = true }
ash-sandbox-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a11",
    "pyyaml>=6.0",
    # For testing sandbox CLI (module only, entry point conflicts with main ash)
    "ash-sandbox-cli",
]
sentry = [
    "sentry-sdk[fastapi]>=2.60.0",
]
test = [
    "time-machine>=3.2.0",
]

# ============== HATCH BUILD ==============

[tool.hatch.build.targets.wheel]
packages = ["src/ash"]

# ============== RUFF CONFIGURATION ==============

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # Line too long (ruff format handles this)
    "S101",   # Use of assert (fine in tests)
    "S608",   # SQL injection false positive on f-strings (used for prompts, not SQL)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["ash"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "S105", "S106"]
"evals/**" = ["S101", "S105", "S106", "E402"]
"src/ash/cli/**" = ["S603", "S607"]  # Allow subprocess calls in CLI
"src/ash/sandbox/**" = ["ASYNC109"]  # Allow timeout parameters in sandbox
"src/ash/skills/installer.py" = ["S603", "S607"]  # Allow subprocess calls for git operations

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============== PYTEST CONFIGURATION ==============

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--basetemp=.pytest_tmp",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "eval: marks tests as evaluation tests (require real LLM)",
    "network: marks tests that require external network access",
]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)s %(name)s: %(message)s"

# ============== COVERAGE ==============

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstract",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
